# flepimop2-epydemix

./: README.md  pyproject.toml
examples/: config.yaml  example_engine.py
src/flepimop2/system/epydemix/: __init__.py
