[project]
name = "flepimop2-epydemix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "flepimop2",
    "numpy>=2.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flepimop2"]

[tool.uv.sources]
flepimop2 = { git = "https://github.com/ACCIDDA/flepimop2" }
